<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Material Calculator</string>
    <string name="error">Error</string>
    <string name="backspace">Backspace</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="sign">Toggle sign</string>
    <string name="equals">Equals</string>
</resources>
